blog session is dooneee

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="nav__items">
             <ul class="nav__list">
               <li class="nav__list--item">
-                <a href="courses.html" class="nav__list--item-link">Kurlar</a>
+                <a href="coursees.html" class="nav__list--item-link">Kurlar</a>
               </li>
               <li class="nav__list--item">
                 <a href="blog.html" class="nav__list--item-link">Blog</a>
@@ -125,24 +125,24 @@
       </div>
     </section>
 
-    <section id="courses">
+    <section id="kurslar">
       <div class="container">
-        <div class="courses_elements">
+        <div class="kurslar_elements">
           <h1>Yo‘nalishlar bo‘yicha kurslar</h1>
 
-          <p class="courses_text">
+          <p class="kurslar_text">
             Zamonaviy sohalardan birini o‘rganing va talabgir kasb egasi
             bo‘ling!
           </p>
 
-          <div class="courses_wrapper">
-            <div class="courses_card">
+          <div class="kurslar_wrapper">
+            <div class="kurslar_card">
               <h2>Dasturlash foundation</h2>
 
               <p>Foundation dasturlash kursida</p>
             </div>
 
-            <div class="courses_card">
+            <div class="kurslar_card">
               <h2>.NET mutaxassislik kursi</h2>
 
               <p>.NET mutaxassislik kursi</p>
@@ -154,7 +154,7 @@
       </div>
     </section>
 
-    <section id="workplace">
+    <section id="ish_joylari">
       <div class="container">
         <h1>Bitiruvchilarimizning ish joylari:</h1>
 
@@ -164,83 +164,83 @@
           yuqori bo‘ladi.
         </p>
 
-        <div class="workplace_wrapper">
-          <div class="workplace_card">
+        <div class="ish_joylari_wrapper">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/epam.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/itechArt.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/humo.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/agrobank.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/davr_bank.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/texnomart.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/soliq.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/uzcard.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/mytaxt.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/mFaktor.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/jafton.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/fido_studio.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/osmondagi_bolalar.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/islom_uz.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/cambridge.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/kun_uz.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/yoshlar_ishlari.svg" alt="Epam_logo" />
           </div>
 
-          <div class="workplace_card">
+          <div class="ish_joylari_card">
             <img src="/assets/icons/pcg.svg" alt="Epam_logo" />
           </div>
         </div>
       </div>
     </section>
 
-    <section id="comments">
+    <section id="izohlar">
       <div class="container">
         <h1>Bitiruvchilarimizdan izohlar</h1>
 
@@ -250,8 +250,8 @@
           kerakli tavsiyalar oling.
         </p>
 
-        <div class="comments_wrapper">
-          <div class="comments_card1">
+        <div class="izohlar_wrapper">
+          <div class="izohlar_card1">
             <div class="watch">
               <a
                 href="https://cdn.najottalim.uz/najottalim/short-videos/60a6ad55-4ca3-4d0f-8007-470b9cc39a88.mp4"
@@ -263,14 +263,14 @@
                 <p>Videoni ko‘rish</p>
               </a>
             </div>
-            <div class="comments_text">
+            <div class="izohlar_text">
               <p class="date">25.01.2023</p>
               <p class="job">SMM-menejer</p>
               <h4>Abdumannof Tursunov</h4>
             </div>
           </div>
 
-          <div class="comments_card2">
+          <div class="izohlar_card2">
             <div class="watch">
               <a
                 href="https://cdn.najottalim.uz/najottalim/short-videos/d7ccc165-8afc-4294-92ed-02d9f1a6f7a2.mp4"
@@ -282,14 +282,14 @@
                 <p>Videoni ko‘rish</p>
               </a>
             </div>
-            <div class="comments_text">
+            <div class="izohlar_text">
               <p class="date">25.01.2023</p>
               <p class="job">Frontend dasturchi</p>
               <h4>Salohiddin Dilmatov</h4>
             </div>
           </div>
 
-          <div class="comments_card3">
+          <div class="izohlar_card3">
             <div class="watch">
               <a
                 href="https://cdn.najottalim.uz/najottalim/short-videos/6468a330-6e3e-4a85-a6fe-8c5a066ce6bc.mp4"
@@ -301,14 +301,14 @@
                 <p>Videoni ko‘rish</p>
               </a>
             </div>
-            <div class="comments_text">
+            <div class="izohlar_text">
               <p class="date">25.01.2023</p>
               <p class="job">Grafik dizayner</p>
               <h4>Shahzoda Sunnatillayeva</h4>
             </div>
           </div>
 
-          <div class="comments_card4">
+          <div class="izohlar_card4">
             <div class="watch">
               <a
                 href="https://cdn.najottalim.uz/najottalim/short-videos/3c5a9b58-5822-43aa-9603-87762de32bf9.mp4"
@@ -320,7 +320,7 @@
                 <p>Videoni ko‘rish</p>
               </a>
             </div>
-            <div class="comments_text">
+            <div class="izohlar_text">
               <p class="date">25.01.2023</p>
               <p class="job">Art-direktor</p>
               <h4>Sayfulloh Asadullayev</h4>
@@ -401,8 +401,8 @@
 
             <div class="footer_card">
               <h1>Ommabop kurslar</h1>
-              <a href="#courses">Dasturlash foundation</a>
-              <a href="#courses">.NET mutaxassislik kursi</a>
+              <a href="#kurslar">Dasturlash foundation</a>
+              <a href="#kurslar">.NET mutaxassislik kursi</a>
             </div>
 
             <div class="footer_card">
