final section toje bitdi

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+
+    <!-- ----HEADER-START---- -->
+
     <header>
       <div class="container">
         <nav class="nav">
@@ -38,8 +41,15 @@
       </div>
     </header>
 
+    <!-- ----HEADER-END---- -->
+
+    <!-- ----BLOG PAGE-START---- -->
+
     <section id="blog">
       <div class="container">
+
+    <!-- ----BTNS-START---- -->
+
        <div class="btns">
          <p class="courses">Blog</p>
 
@@ -52,6 +62,9 @@
           <button class="btn_white">Najot Quiz</button>
         </div>
        </div>
+
+    <!-- ----BTNS-END---- -->
+
         <div class="road">
           <p class="back">Bosh sahifa -></p>
         </div>
@@ -214,6 +227,10 @@
       </div>
     </section>
 
+    <!-- ----BLOG PAGE-END---- -->
+
+    <!-- ----FOOTER-START---- -->
+
     <footer>
       <div class="container">
         <div class="right">
@@ -320,5 +337,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- ----FOOTER-END---- -->
+
   </body>
 </html>
