--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+
+    <!-- ----HEADER-START---- -->
+
     <header>
       <div class="container">
         <nav class="nav">
@@ -38,6 +41,10 @@
       </div>
     </header>
 
+    <!-- ----HEADER-END---- -->
+
+    <!-- ----INTRO SECTION-START---- -->
+
     <section id="intro">
       <div class="intro_text">
         <h1>
@@ -56,6 +63,10 @@
 
       <img src="/assets/images/div.hero-removebg.png" alt="" />
     </section>
+
+    <!-- ----INTRO SECTION-END---- -->
+
+    <!-- ----ADVANTAGES SECTION-START---- -->
 
     <section id="advantages">
       <div class="container">
@@ -125,6 +136,10 @@
       </div>
     </section>
 
+    <!-- ----ADVANTAGES SECTION-END---- -->
+
+    <!-- ----KURSLAR SECTION-START---- -->
+
     <section id="kurslar">
       <div class="container">
         <div class="kurslar_elements">
@@ -153,6 +168,10 @@
         <a href="#">Barcha kurslarni ko‘rish</a>
       </div>
     </section>
+
+    <!-- ----KURSLAR SECTION-END---- -->
+
+    <!-- ----ISH_JOYLARI SECTION-START---- -->
 
     <section id="ish_joylari">
       <div class="container">
@@ -239,6 +258,10 @@
         </div>
       </div>
     </section>
+
+    <!-- ----ISH_JOYLARI SECTION-END---- -->
+
+    <!-- ----IZOHLAR SECTION-START---- -->
 
     <section id="izohlar">
       <div class="container">
@@ -330,6 +353,10 @@
       </div>
     </section>
 
+    <!-- ----IZOHLAR SECTION-END---- -->
+
+    <!-- ----HELP SECTION-START---- -->
+
     <section id="help">
       <div class="container">
         <div class="help_wrapper">
@@ -373,6 +400,10 @@
         </div>
       </div>
     </section>
+
+    <!-- ----HELP SECTION-END---- -->
+
+    <!-- ----FOOTER SECTION-START---- -->
 
     <footer>
       <div class="container">
@@ -480,5 +511,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- ----FOOTER SECTION-END---- -->
+
   </body>
 </html>
