--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="nav__items">
             <ul class="nav__list">
               <li class="nav__list--item">
-                <a href="coursees.html" class="nav__list--item-link">Kurlar</a>
+                <a href="cousees.html" class="nav__list--item-link">Kurlar</a>
               </li>
               <li class="nav__list--item">
                 <a href="blog.html" class="nav__list--item-link">Blog</a>
