final section toje bitdi

--- a/cousees.html
+++ b/cousees.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="road">
           <p class="back">Bosh sahifa -></p>
-          <p class="courses">Kurslar</p>
+          <p class="kurslar">Kurslar</p>
         </div>
 
         <div class="title_input">
@@ -65,16 +65,16 @@
           <button class="btn_white">Dasturlash</button>
         </div>
 
-        <div class="courses_wrapper1">
-          <div class="courses_card1">
-            <div class="courses_card-top">
+        <div class="kurslar_wrapper1">
+          <div class="kurslar_card1">
+            <div class="kurslar_card-top">
               <span class="category">Dasturlash</span>
               <p><span>Davomiylik:</span> 19 soat 24 daqiqa</p>
               <p><span>Darslar soni:</span> 126 ta</p>
             </div>
 
-            <div class="courses_card_bottom">
-              <div class="courses_card-text">
+            <div class="kurslar_card_bottom">
+              <div class="kurslar_card-text">
                 <h2>Dasturlash foundation</h2>
                 <p>
                   Foundation dasturlash kursida C va Python dasturlash tillari
@@ -87,15 +87,15 @@
             </div>
           </div>
 
-          <div class="courses_card1">
-            <div class="courses_card-top">
+          <div class="kurslar_card1">
+            <div class="kurslar_card-top">
               <span class="category">Dasturlash</span>
               <p><span>Davomiylik:</span>23 soat 7 daqiqa</p>
               <p><span>Darslar soni:</span>93 ta</p>
             </div>
 
-            <div class="courses_card_bottom">
-              <div class="courses_card-text">
+            <div class="kurslar_card_bottom">
+              <div class="kurslar_card-text">
                 <h2>
                   .NET mutaxassislik <br />
                   kursi
@@ -145,8 +145,8 @@
 
             <div class="footer_card">
               <h1>Ommabop kurslar</h1>
-              <a href="#courses">Dasturlash foundation</a>
-              <a href="#courses">.NET mutaxassislik kursi</a>
+              <a href="#kurslar">Dasturlash foundation</a>
+              <a href="#kurslar">.NET mutaxassislik kursi</a>
             </div>
 
             <div class="footer_card">
