--- a/cousees.html
+++ b/cousees.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="road">
           <p class="back">Bosh sahifa -></p>
-          <p class="kurslar">Kurslar</p>
+          <p class="kurslar">Kurlar</p>
         </div>
 
         <div class="title_input">
